Fix #117783: Allow Multiple Negatives in Numerical Inputs with Units

Remove all sequences of two minus signs in unit_distribute_negatives
to allow entry of strings like "---90d"